# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-integration-tests — Layer 3 wire-interop test harness.
#
# Phase 2 walking-skeleton deliverable (R42+). Each `tests/layer3_*.rs`
# file pairs a wz-emitted encoder (`wz_codecs::<codec>::<Struct>::
# encode`) with the corresponding zenoh-pico C encoder (`_z_*_encode`
# via `zenoh_pico_sys`), constructs an equivalent logical message on
# both sides, encodes via both paths, and BYTE-COMPARES the output.
#
# This is the only layer in the verification stack that produces an
# OBJECTIVE evidence that the watching-zenoh codec SCXML spec
# correctly models the zenoh-pico 1.9.0 wire format. Layer 1 (cargo
# emit success) and Layer 2 (sce-codegen-vs-sce-codegen body-golden)
# are both internal-consistency gates that cannot catch a
# spec-vs-reality mismatch.
#
# Crate type: integration-tests-only (no library). All test logic
# lives in `tests/layer3_*.rs` files so `cargo test -p
# wz-integration-tests` is the single command that exercises the
# Layer 3 lane.

[package]
name = "wz-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Layer 3 wire-interop tests: wz codec encoders vs zenoh-pico C encoders, byte-compare."
publish = false

# No library; the crate is purely a host for `tests/*.rs` integration
# tests. Cargo's default `src/lib.rs` discovery is disabled by setting
# an explicit (and absent) lib path.
[lib]
path = "src/lib.rs"

[dev-dependencies]
wz-codecs = { path = "../wz-codecs" }
zenoh-pico-sys = { path = "../zenoh-pico-sys" }
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust" }
# R116b — `hal_timer_routing.rs` declares an in-test TimerProbePolicy
# that uses sce_rust_runtime::{Engine, Hal, StatePolicy} directly to
# exercise the Hal-routed scheduler clock post-SCE fa3a2fda. The
# production wz crates reach SCE only via sce_forge_runtime + the
# generated Policy code; this dep is test-surface only.
sce-rust-runtime = { path = "../../vendor/sce/sce-rust-runtime" }
# R68a — Layer 3 inbound parser test reaches into wz-runtime-tokio's
# session_glue (`parse_inbound`, `InboundFrame`, `SessionLinkActions::
# handle_inbound`) to verify the reverse direction: zenoh-pico encode
# → wz parse → SessionInitParams.cookie populate.
wz-runtime-tokio = { path = "../wz-runtime-tokio" }
# R71 — `fixture_session_init_params` / `install_session_actions_for_test`
# / `dispatch_script` live in this sibling crate. Replaces the
# `_test_support` Cargo feature used through R70.
wz-runtime-tokio-test-support = { path = "../wz-runtime-tokio-test-support" }
# tempfile is used by R63 link_emitter_b6 to stage sce-codegen emit
# output in a clean directory per test run (no pollution of $OUT_DIR
# or vendor/sce/target).
tempfile = "3"

[lints]
workspace = true
