# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-runtime-core — Phase W entry (R251).
#
# Trait-only crate that defines the OS/runtime service contracts (Runtime
# + TimeSource + Allocator) so wz upper layers can compile against either
# the tokio/std AP profile or the lwIP/no_std MCU profile from one code
# base. This crate is the §5.P (runtime services tier) of the RFC; it is
# distinct from §5.I (CPU intrinsics tier) which lives in the separate
# `intrinsics-runtime--symbol-surface` doc.
#
# R230 ratified §5.P as spec-only. R251 (this round) lands the trait
# *skeleton* with no concrete impl wired into wz-runtime-tokio yet — the
# next rounds (R252+) add TokioRuntime as a concrete impl and start
# reparameterising the 111 std/tokio call sites that R230's inventory
# baseline counted. The R63 anti-stub rule applies: no NOP impl ships
# here; concrete impls land alongside real callers.
#
# Unconditional `no_std` lib + opt-in `alloc` feature. The crate exposes
# only traits + a flat error enum, none of which need std; AP-profile
# binaries (wz-runtime-tokio / wz-ap-demo) link std at the binary level
# anyway, so a separate `std` feature was redundant and removed in R269.
# The `alloc` feature gates the `RuntimeError::JoinFailed { payload:
# Box<...> }` variant (R266 panic-payload capture) — AP profile turns it
# on; MCU bare-metal profiles without a heap leave it off and rely on
# the unit-variant JoinFailed shape.

[package]
name = "wz-runtime-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Phase W runtime-services-tier trait skeleton (Runtime/TimeSource/Allocator) — R230 §5.P."

[features]
default = []
# Bring `alloc` into scope so trait method bodies + error variants can
# reference Box etc. when needed (R266 panic-payload capture is the
# load-bearing consumer). MCU profiles that supply a heap turn this on;
# bare-metal profiles without a heap leave it off and rely on the unit-
# variant JoinFailed shape + stack/static allocation only.
alloc = []

[lints]
workspace = true
